# legacy-starry-sky

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: consts.hpp  settings.hpp  starry_sky.hpp
include/dobby_wrapper/: dobby_wrapper.hpp  types.hpp  utils.cpp  utils.hpp
include/modules/: editor.hpp  misc.hpp
include/ui/: menu_settings.hpp
include/ui/components/: options.hpp
src/: settings.cpp  starry_sky.cpp
src/modules/: editor.cpp  misc.cpp
src/ui/: menu_settings.cpp
src/ui/components/: option.cpp
submodules/gd-headers/: cocos2dcpp.h
submodules/gd-headers/cocos2d/CocosDenshion/include/: SimpleAudioEngine.h
submodules/gd-headers/cocos2d/cocos2dx/: CCDirector.h
submodules/gd-headers/cocos2d/cocos2dx/base_nodes/: CCNode.h
submodules/gd-headers/cocos2d/cocos2dx/cocoa/: CCObject.h
submodules/gd-headers/cocos2d/cocos2dx/particle_nodes/: CCParticleSystem.h
submodules/gd-headers/cocos2d/cocos2dx/robtop/: CCBlockLayer.h
submodules/gd-headers/robtop/: robtop.h
submodules/gd-headers/robtop/layers_scenes_transitions_nodes/: EditorPauseLayer.hpp  EditorUI.hpp  FLAlertLayer.hpp  LevelEditorLayer.hpp  LevelInfoLayer.hpp  OptionsLayer.hpp
submodules/gd-headers/robtop/level_nodes/: GJGameLevel.hpp
submodules/gd-headers/robtop/menu_nodes/: CCMenuItemToggler.hpp
submodules/gd-headers/robtop/sprite_nodes/: CCMenuItemSpriteExtra.hpp  GameObject.hpp
submodules/gd-headers/robtop/support/: LevelTools.hpp
